# ksg_canbus_rpi_sniffer

./: AI_CODING_RULES.md  CMakeLists.txt  HLD.md  TODO_LIST.txt  build_and_run_all_tests.py  run_all_tests.py
car_system_canbus_emulator/: setup_vcan.sh
car_system_canbus_emulator/include/: can_utils.h  emulator.h
car_system_canbus_emulator/src/: broadcast.c  can_utils.c  main.c
documentations/: CONTROLS_INJECTION_STRATEGY.md  CONTROLS_MAPPING_DESIGN.md  EMULATORS_PROTOCOL_MAP.md  EXTERNAL_SERVER_SPEC.md  FUTURE_IDEAS.md  HARDWARE_INTEGRATION.md  SOW.md  androidSOW.md  rpi_leds_control_example.txt
emulators/: setup_vcan.sh
emulators/car_computer/include/: CarComputer.h
emulators/car_computer/src/: CarComputer.cpp  main.cpp
emulators/car_system/src/: broadcast.c  can_utils.c  main.c  simulation.c
emulators/wrapper/: emulator_wrapper.cpp
external_server/: CMakeLists.txt  TEST_PLAN.md
external_server/android/: settings.gradle.kts
external_server/android/app/: Agents.md  build.gradle.kts
external_server/android/app/src/main/: AndroidManifest.xml
external_server/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
external_server/android/app/src/main/res/layout/: activity_main.xml  dialog_decoder_editor.xml  fragment_cockpit.xml  fragment_connection.xml  fragment_dashboard.xml  fragment_decoder.xml  fragment_local_settings.xml  fragment_obd.xml  fragment_records.xml  fragment_remote_settings.xml  fragment_rules.xml  fragment_settings.xml  fragment_sniffer.xml  fragment_status.xml  fragment_system_logs.xml  nav_header.xml
external_server/android/app/src/main/res/menu/: drawer_menu.xml  sniffer_context_menu.xml
external_server/android/app/src/main/res/navigation/: nav_graph.xml
external_server/android/app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
external_server/android/app/src/main/res/values-night/: themes.xml
external_server/android/gradle/: libs.versions.toml
external_server/android/gradle/wrapper/: gradle-wrapper.properties
external_server/include/: sniffer_client.h
external_server/python/: main.py
external_server/python/backend/: protocol.py  udp_client.py
external_server/python/gui/: cockpit_panel.py  decoder_editor.py  obd2_panel.py  reverse_engineering.py  settings_dialog.py  sniffer_remote_settings.py  status_window.py
external_server/python/logic/: decoder.py  obd2_manager.py  profile_manager.py  recorder.py  settings_manager.py
external_server/src/: sniffer_client.cpp
include/base/: CommunicationObj.hpp  ObdPids.h
include/canbus_communication/: ObdCanbusCommunication.h
include/communication/: CanbusProtocol.h  TcpCanbusCommunication.h  TcpCommunication.h  TcpCommunication.hpp  UdpCanbusCommunication.h  UdpCommunication.h
include/core/: MainService.h
include/sniffer/: Sniffer.h
include/utils/: LedControllerUtil.hpp  Params.hpp  StatusManager.hpp
src/: main.cpp
src/canbus_communication/: ObdCanbusCommunication.cpp
src/communication/: TcpCanbusCommunication.cpp  TcpCommunication.cpp  UdpCanbusCommunication.cpp  UdpCommunication.cpp
src/core/: MainService.cpp
src/sniffer/: Sniffer.cpp
tests/: car_computer_test.py  car_system_test.py  emulator_tester.cpp  emulators_integration_test.py  ledControlerUtilsTester.cpp  main_service_tester.py  params_tester.cpp  run_emulator_test.py  run_sniffer_test.py  sniffer_test_lib.cpp  tcp_canbus_tester.cpp  tcp_communication_tester.cpp  udp_canbus_tester.cpp  udp_communication_tester.cpp
tests/wrapper/: main_service_wrapper.cpp
